Fix top margin on mobile

--- a/source/assets/stylesheets/_global.scss
+++ b/source/assets/stylesheets/_global.scss
@@ -1,5 +1,7 @@
 #main-content {
-  margin-top: $navigation-height;
+  @include media ($medium-screen) {
+    margin-top: $navigation-height;
+  }
 }
 
 #footer {
